:closed_lock_with_key: restdocs 설정 (#6)